fixed footer text, too big on phones

--- a/tailwind/style.css
+++ b/tailwind/style.css
@@ -51,6 +51,9 @@
   #bg-image {
     background-image: url("../images/bg-intro-mobile.png");
   }
+  p.attribution {
+    font-size: 0.65rem;
+  }
 }
 @media (min-width: 1024px) {
   #paragraph {
